drastically improving entity system

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ VLLM_ENDPOINT=https://localhost:8000/v1/chat/completions
 VLLM_MODEL=NousResearch/Hermes-3-Llama-3.1-8B
 VLLM_API_KEY=sk-1234
 
+OPENROUTER_API_KEY=sk-1234
+OPENROUTER_ENDPOINT=https://openrouter.ai/api/v1/chat/completions
+OPENROUTER_MODEL=deepseek/deepseek-r1
+
 # Database Credentials
 DB_USER=db_user
 DB_PASSWORD=db_pwd@123
