--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,6 @@ cython_debug/
 abstractions/.DS_Store
 abstractions/.DS_Store
 minference/.DS_Store
+/bestiary_files
+all_monsters.json
+/examples/bestiary_files
